<resources>
    <string name="app_name">ContactsApp</string>
    <string name="share">Share</string>
    <string name="mobile_call">Mobile Call</string>
    <string name="phone_number">Phone number</string>
    <string name="contact_name">Contact Name</string>
    <string name="name_here">Name Here</string>
    <string name="phone_number_here">Phone Number Here</string>
    <string name="type_in_here_to_search">Type in here to search</string>
    <string name="save">SAVE</string>
    <string name="add">ADD</string>
</resources>
