<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_name"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginTop="90dp"
                />

            <EditText
                android:id="@+id/editdialog_new_name_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name_here"
                android:layout_marginTop="-5dp"
                android:layout_marginLeft="8dp"
                android:layout_gravity="bottom"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/editdialog_new_phone_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_here"
                android:inputType="number"
                android:maxLength="8"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <Button
                android:id="@+id/editdialog_btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:drawableLeft="@drawable/ic_add_black_24dp"
                android:layout_gravity="start"
                android:textAlignment="textStart"
                android:text="@string/save"
                android:drawablePadding="20dp"
                />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/dialog_img_id"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/contact_icon"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        />



</RelativeLayout>